@@ -1,0 +1,2 @@
+# pyexpat.c contains expat error messages that lintian mis-attributes to embedding
+@PVER@-nopie binary: embedded-library expat [usr/bin/@PVER@]
